# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 May 2009; Vlastimil Babka <caster@gentoo.org>
  +sun-jdk-1.7.0.0_alpha57.ebuild:
  Version bump.

  26 Apr 2009; Serkan Kaba <serkan@gentoo.org>
  sun-jdk-1.6.0.14_beta5.ebuild, sun-jdk-1.7.0.0_alpha56.ebuild:
  Added die calls to prevent partial installation.

  24 Apr 2009; Serkan Kaba <serkan@gentoo.org>
  -sun-jdk-1.6.0.14_beta4.ebuild, sun-jdk-1.6.0.14_beta5.ebuild,
  -sun-jdk-1.7.0.0_alpha55.ebuild, sun-jdk-1.7.0.0_alpha56.ebuild:
  Revert back wget tips because URL redirection breaks downloaded filenames.
  Remove old.

  24 Apr 2009; Vlastimil Babka <caster@gentoo.org>
  sun-jdk-1.6.0.14_beta5.ebuild, sun-jdk-1.7.0.0_alpha56.ebuild:
  Replace wget -O with -P in fetch hint.

  24 Apr 2009; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.14_beta3.ebuild, +sun-jdk-1.6.0.14_beta5.ebuild,
  -sun-jdk-1.7.0.0_alpha54.ebuild, +sun-jdk-1.7.0.0_alpha56.ebuild:
  Version bump.

  17 Apr 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha53.ebuild, +sun-jdk-1.7.0.0_alpha55.ebuild:
  Version bump.

  11 Apr 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha52.ebuild, +sun-jdk-1.7.0.0_alpha54.ebuild:
  Version bump.

  03 Apr 2009; Vlastimil Babka <caster@gentoo.org> ++:
  Version bump.

  03 Apr 2009; Vlastimil Babka <caster@gentoo.org> ++:
  Version bump.

  27 Mar 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha50.ebuild, +sun-jdk-1.7.0.0_alpha52.ebuild:
  Version Bump.

  20 Mar 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha49.ebuild, +sun-jdk-1.7.0.0_alpha51.ebuild:
  Version Bump.

  12 Mar 2009; Serkan Kaba <serkan@gentoo.org>
  -sun-jdk-1.6.0.14_beta2.ebuild, +sun-jdk-1.6.0.14_beta3.ebuild:
  Version bump.

  05 Mar 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha47.ebuild, +sun-jdk-1.7.0.0_alpha50.ebuild:
  Version bump.
